# server/src/openapi/__fixtures__/openapi.baseline.json
@@ -743,6 +743,10 @@
               "up",
               "down"
             ]
+          },
+          "is_summary": {
+            "type": "boolean",
+            "default": false
           }
         },
         "required": [
